[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprite/Character/Main/IMG-2581.PNG" type="Texture" id=1]
[ext_resource path="res://Font/Achafexp.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Font/Score.tres" type="DynamicFont" id=3]
[ext_resource path="res://Screen/Menu/Menu.gd" type="Script" id=4]
[ext_resource path="res://Screen/Game/Animation/FireballMainScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprite/Character/Main/IMG-2578.PNG" type="Texture" id=6]
[ext_resource path="res://Screen/Game/Animation/FireballMainScreenFin.tscn" type="PackedScene" id=7]
[ext_resource path="res://Music/NightOfChaos.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sprite/Character/Rival/IMG-2595.PNG" type="Texture" id=9]
[ext_resource path="res://Sprite/Character/Main/IMG-2596.PNG" type="Texture" id=10]
[ext_resource path="res://Font/titleselect.tres" type="DynamicFont" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0745098, 0.027451, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
margin_right = 1284.0
margin_bottom = 720.0
rect_min_size = Vector2( 1280, 720 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
margin_right = 640.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fireball" parent="ColorRect/HBoxContainer/VBoxContainer2" instance=ExtResource( 5 )]
visible = false
position = Vector2( 315.535, 399.338 )

[node name="SelfDraw" type="Sprite" parent="ColorRect/HBoxContainer/VBoxContainer2"]
position = Vector2( 317.264, 373.976 )
scale = Vector2( 2.05036, 2.05036 )
texture = ExtResource( 1 )

[node name="Fireball2" parent="ColorRect/HBoxContainer/VBoxContainer2" instance=ExtResource( 7 )]
visible = false
position = Vector2( 315.535, 399.338 )

[node name="SelfWin" type="Sprite" parent="ColorRect/HBoxContainer/VBoxContainer2"]
visible = false
position = Vector2( 317.264, 373.976 )
scale = Vector2( 2.05, 2.05 )
texture = ExtResource( 6 )

[node name="SelfDefault" type="Sprite" parent="ColorRect/HBoxContainer/VBoxContainer2"]
visible = false
position = Vector2( 312.09, 382.156 )
scale = Vector2( 0.896474, 0.896474 )
texture = ExtResource( 10 )

[node name="SelfLose" type="Sprite" parent="ColorRect/HBoxContainer/VBoxContainer2"]
visible = false
position = Vector2( 317.264, 373.976 )
scale = Vector2( 2.05, 2.05 )
texture = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer"]
margin_left = 644.0
margin_right = 1284.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 358.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Label" type="Label" parent="ColorRect/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_top = 116.0
margin_right = 612.0
margin_bottom = 242.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "The Wicked Manager"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/HBoxContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 640.0
margin_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Start" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 2 )
text = "Start"

[node name="Skip" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_top = 80.0
margin_right = 640.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 11 )
custom_styles/normal = SubResource( 3 )
text = "Play Match"

[node name="Option" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 640.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Title Customization"

[node name="Quit" type="Button" parent="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 640.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 3 )
custom_styles/normal = SubResource( 5 )
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer/Skip" to="." method="_on_Skip_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer/Skip" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer/Option" to="." method="_on_Option_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
